syntax = "proto3";

package dialogue;

option go_package = "github.com/orochi-keydream/dialogue-service/api/dialogue";

service DialogueService {
    rpc GetMessagesV1 (GetMessagesV1Request) returns (GetMessagesV1Response);
    rpc SendMessageV1 (SendMessageV1Request) returns (SendMessageV1Response);
}

message GetMessagesV1Request {
    string from_user_id = 1;
    string to_user_id = 2;
}

message GetMessagesV1Response {
    repeated Message messages = 1;

    message Message {
        int64 message_id = 1;
        string from_user_id = 2;
        string to_user_id = 3;
        string text = 4;
    }
}

message SendMessageV1Request {
    string from_user_id = 1;
    string to_user_id = 2;
    string text = 3;
}

message SendMessageV1Response { }
